--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,11 @@
         <servlet-class>twitter4j.examples.signin.PostServlet
         </servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>timelines</servlet-name>
+        <servlet-class>twitter4j.examples.signin.Timelines
+        </servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>signin</servlet-name>
         <url-pattern>/signin</url-pattern>
@@ -40,6 +45,10 @@
     <servlet-mapping>
         <servlet-name>post</servlet-name>
         <url-pattern>/post</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>timelines</servlet-name>
+        <url-pattern>/timelines</url-pattern>
     </servlet-mapping>
     <error-page>
         <exception-type>twitter4j.TwitterException</exception-type>
