--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,8 +29,16 @@
         </servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>savedUsers</servlet-name>
-        <servlet-class>twitter4j.examples.signin.SavedUsersTimelines</servlet-class>
+        <servlet-name>savedUser1</servlet-name>
+        <servlet-class>twitter4j.examples.signin.SavedUser1Timelines</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>savedUser2</servlet-name>
+        <servlet-class>twitter4j.examples.signin.SavedUser2Timelines</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>savedUser3</servlet-name>
+        <servlet-class>twitter4j.examples.signin.SavedUser3Timelines</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>signin</servlet-name>
@@ -53,8 +61,16 @@
         <url-pattern>/timelines</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>savedUsers</servlet-name>
-        <url-pattern>/savedUsers</url-pattern>
+        <servlet-name>savedUser1</servlet-name>
+        <url-pattern>/savedUser1</url-pattern>
+    </servlet-mapping>
+     <servlet-mapping>
+        <servlet-name>savedUser2</servlet-name>
+        <url-pattern>/savedUser2</url-pattern>
+    </servlet-mapping>
+     <servlet-mapping>
+        <servlet-name>savedUser3</servlet-name>
+        <url-pattern>/savedUser3</url-pattern>
     </servlet-mapping>
     <error-page>
         <exception-type>twitter4j.TwitterException</exception-type>
